--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Blog App built with react,node and mysql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "devStart": "nodemon index.js"
   },
   "author": "Juliano Perin",
   "license": "ISC",
